--- a/main.html
+++ b/main.html
@@ -2,12 +2,35 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Random Quote Machine</title>
+
+	<!--CSS FILES-->	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-	
+	<div class="container text-center">
+		<div class="row col-md-12">
+			<h1>Random Quote Machine</h1>
+			<h3>WARNING: These quotes may inspire you</h3>
+			<hr>
+		</div>
+
+		<div class="col-md-8 col-md-offset-2">
+			<div class="quote-box">
+				<p id="quote">To not have to do something, you have to be able to do it</p>
+				<p id="author">- Muhammad Bello</p>
+			</div>
+
+			<ul class="list-inline">
+				<li><a href="#" class="btn btn-default btn-lg new-quote"><i class="fa fa-quote-left fa-fw"></i>New Quote</a></li>
+				<li><a href="#" class="btn btn-default btn-lg tweet-quote"><i class="fa fa-twitter fa-fw"></i>Tweet Quote</a></li>
+			</ul>
+		</div>
+	</div>
+
 
 	<script type="text/javascript" src="main.js"></script>
 </body>
