implement random quote generation from forismatic api

--- a/main.html
+++ b/main.html
@@ -20,18 +20,20 @@
 
 		<div class="col-md-8 col-md-offset-2">
 			<div class="quote-box">
-				<p id="quote">To not have to do something, you have to be able to do it</p>
-				<p id="author">- Muhammad Bello</p>
+				<p id="quote"></p>
+				<p id="author"></p>
 			</div>
 
 			<ul class="list-inline">
-				<li><a href="#" class="btn btn-default btn-lg new-quote"><i class="fa fa-quote-left fa-fw"></i>New Quote</a></li>
-				<li><a href="#" class="btn btn-default btn-lg tweet-quote"><i class="fa fa-twitter fa-fw"></i>Tweet Quote</a></li>
+				<li><button id="new-quote" class="btn btn-default btn-lg"><i class="fa fa-quote-left fa-fw"></i>New Quote</button></li>
+				<li><button id="tweet-quote" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i>Tweet Quote</button></li>
 			</ul>
 		</div>
 	</div>
 
-
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
